--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "technology.dubaileading.maccessuser"
+        applicationId "technology.dubaileading.maccessemployee"
         minSdk 21
         targetSdk 31
         versionCode 1
-        versionName "1.0"
+        versionName "2.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
