--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,51 +2,57 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="technology.dubaileading.maccessemployee">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
+        android:name="technology.dubaileading.maccessemployee.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name="technology.dubaileading.maccessemployee.BaseApplication"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.MAccess">
-<!--        <activity-->
-<!--            android:exported="true"-->
-<!--            android:name=".ui.CheckOutActivity"-->
-<!--            android:theme="@style/HomeActivity.Theme">-->
-<!--            -->
-<!--        </activity>-->
-
-        <activity android:name="technology.dubaileading.maccessemployee.ui.attendance.AttendanceActivity"
+        android:theme="@style/Theme.MAccess"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.change_password.ChangePasswordActivity"
             android:exported="false"
             android:theme="@style/HomeActivity.Theme"/>
-
-        <activity android:name="technology.dubaileading.maccessemployee.ui.check_out.CheckOutJiginActivity"
-            android:theme="@style/HomeActivity.Theme"
-            android:exported="false"/>
+        <activity
+            android:name=".ui.personal_info.PersonalInfoActivity"
+            android:exported="false"
+            android:theme="@style/HomeActivity.Theme" /> <!-- <activity -->
+        <!-- android:exported="true" -->
+        <!-- android:name=".ui.CheckOutActivity" -->
+        <!-- android:theme="@style/HomeActivity.Theme"> -->
+        <!--  -->
+        <!-- </activity> -->
+        <activity
+            android:name="technology.dubaileading.maccessemployee.ui.attendance.AttendanceActivity"
+            android:exported="false"
+            android:theme="@style/HomeActivity.Theme" />
+        <activity
+            android:name="technology.dubaileading.maccessemployee.ui.check_out.CheckOutActivity"
+            android:exported="false"
+            android:theme="@style/HomeActivity.Theme" />
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAF8myPEYufyG3mDQzhiXqqG0VRPwyHL2Q" />
+
         <activity
             android:name="technology.dubaileading.maccessemployee.ui.login.LoginActivity"
             android:exported="false" />
         <activity
             android:name="technology.dubaileading.maccessemployee.ui.check_in.CheckInActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name="technology.dubaileading.maccessemployee.ui.splash.SplashActivity"
-            android:exported="true">
-
-        </activity>
-        <activity android:name="technology.dubaileading.maccessemployee.ui.splash_gif.SplashGifActivity"
+            android:exported="true" />
+        <activity
+            android:name="technology.dubaileading.maccessemployee.ui.splash_gif.SplashGifActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -57,7 +63,7 @@
         <activity
             android:name="technology.dubaileading.maccessemployee.ui.HomeActivity"
             android:exported="true"
-            android:theme="@style/HomeActivity.Theme"/>
+            android:theme="@style/HomeActivity.Theme" />
     </application>
 
 </manifest>
