--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'com.google.firebase.crashlytics'
     id 'kotlin-parcelize'
 }
+apply plugin: 'kotlin-android'
 
 //classpath 'com.google.gms:google-services:4.3.12'
 
@@ -72,4 +73,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
-    implementation("io.coil-kt:coil:2.1.0")}
+    implementation("io.coil-kt:coil:2.1.0")
+
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
+    implementation project(':picker')
+}
