--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,6 @@ dependencies {
 
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
+    implementation 'com.google.android.play:core:1.10.3'
     implementation project(':picker')
 }
