--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,22 +7,31 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name="technology.dubaileading.maccessemployee.BaseApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.MAccess"
-        android:hardwareAccelerated="true"
         android:usesCleartextTraffic="true">
-
-
-
+        <activity
+            android:name=".ui.forgot_password.ResetPasswordActivity"
+            android:exported="false"
+            android:theme="@style/HomeActivity.Theme" />
+        <activity
+            android:name=".ui.forgot_password.VerifyOTPActivity"
+            android:exported="false"
+            android:theme="@style/HomeActivity.Theme" />
+        <activity
+            android:name=".ui.forgot_password.ForgotPasswordActivity"
+            android:exported="false"
+            android:theme="@style/HomeActivity.Theme" />
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:exported="false"
@@ -75,6 +84,7 @@
             android:name=".ui.HomeActivity"
             android:exported="true"
             android:theme="@style/HomeActivity.Theme" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
