--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'androidx.navigation.safeargs'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-android-extensions'
+
 }
 //apply plugin: 'kotlin-android'
 
@@ -77,7 +78,8 @@ android {
         if (variant.flavorName == 'staging') {
             buildConfigField "String", "BASE_URL", '"http://staging.dubaileading.technology/maccess-saas/api/public/api/"'
         } else if (variant.flavorName == 'production') {
-            buildConfigField "String", "BASE_URL", '"http://maccess-saas-api.dubaileading.technology/api/"'
+            //buildConfigField "String", "BASE_URL", '"http://maccess-saas-api.dubaileading.technology/api/"'
+            buildConfigField "String", "BASE_URL", '"http://staging.dubaileading.technology/maccess-saas/api/public/api/"'
 
         }
 
@@ -143,5 +145,15 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation "com.airbnb.android:lottie:4.0.0"
+
+    //Pagination
+    def paging_version = "3.1.1"
+    implementation("androidx.paging:paging-runtime-ktx:$paging_version")
+    implementation "androidx.paging:paging-compose:1.0.0-alpha17"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    //Hilt
+    implementation("com.google.dagger:hilt-android:2.39")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
 
 }
