--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="technology.dubaileading.maccessemployee.BaseApplication"
-
+        android:name=".BaseApplication"
         android:allowBackup="false"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,6 +24,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.interviewround.Interviewroundlist"
+            android:exported="false" />
+        <activity
+            android:name=".ui.manager.Addnewjob.AddNewJobPost"
+            android:exported="false" />
+        <activity
+            android:name=".ui.manager.Managerjobpostlist"
+            android:exported="false" />
+        <activity
+            android:name=".ui.applyjobform.Applyjobform"
+            android:exported="false" />
+        <activity
+            android:name=".ui.jobpostdetail.Jobpostdetail"
+            android:exported="false" />
+        <activity
+            android:name=".ui.jobpost.Jobpost"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.forgot_password.ResetPasswordActivity"
             android:exported="false"
@@ -36,15 +56,15 @@
             android:name=".ui.forgot_password.VerifyOTPActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.forgot_password.ForgotPasswordActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.settings.SettingsActivity"
@@ -56,8 +76,8 @@
             android:name=".ui.change_password.ChangePasswordActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.personal_info.PersonalInfoActivity"
@@ -98,14 +118,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.HomeActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize"
             tools:ignore="LockedOrientationActivity" />
 
         <provider
@@ -126,6 +145,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
             android:value="${crashlytics}" />
